--- a/src/main/webapp/resources/scss/style.scss
+++ b/src/main/webapp/resources/scss/style.scss
@@ -149,7 +149,7 @@ body.body {
 	}
 	
 	#bg {
-		background: url("../../resources/images/bg.jpg") no-repeat;
+		background: url("../resources/images/bg.jpg") no-repeat;
 		background-size: cover;
 		height: 100vh;
 		width: 100%;
