--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,180 +1,1 @@
-a {
-  color: #101418;
-}
-
-body.body {
-  font-family: 'Roboto', sans-serif;
-  padding: 0;
-  margin: 0;
-  font-size: 12px;
-  background: #f3f3f3;
-}
-
-body.body .header {
-  position: fixed;
-  top: 0;
-  background: white;
-  width: 100%;
-  padding: 20px 0;
-  height: 80px;
-  box-shadow: 3px 0 7px rgba(0, 0, 0, 0.4);
-}
-
-body.body .header .header-container {
-  width: 1200px;
-  margin: 0 auto;
-}
-
-body.body .header .header-container .loginBtn {
-  float: right;
-}
-
-body.body .header .header-container img {
-  float: left;
-}
-
-body.body .header .header-container ul {
-  float: right;
-  margin-right: 20px;
-}
-
-body.body .header .header-container ul li a {
-  padding-top: 8px;
-  padding-bottom: 8px;
-  font-weight: bold;
-  border-radius: 3px;
-}
-
-body.body .header .header-container ul li a:hover {
-  color: white;
-  background: #16a085;
-}
-
-body.body .container .block-action {
-  margin: 0 auto;
-  width: 810px;
-  margin-top: 120px;
-}
-
-body.body .container .block-action a.a {
-  color: #101418;
-}
-
-body.body .container .block-action a.a .btn-action {
-  width: 250px;
-  padding: 40px;
-  margin-right: 20px;
-  float: left;
-  border-radius: 10px;
-  background: white;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  transition: all 100ms ease-out;
-}
-
-body.body .container .block-action a.a .btn-action .fa {
-  text-align: center;
-  font-size: 100px;
-  display: block;
-  margin: 0 auto;
-  color: #16a085;
-  transition: all 100ms ease-out;
-}
-
-body.body .container .block-action a.a .btn-action .title-action {
-  line-height: 50px;
-  display: block;
-  font-size: 18px;
-  text-align: center;
-  margin: 0 auto;
-  font-weight: bold;
-  transition: all 100ms ease-out;
-}
-
-body.body .container .block-action a:hover.a {
-  color: #101418;
-}
-
-body.body .container .block-action a:hover.a .btn-action {
-  padding: 30px;
-}
-
-body.body .container .block-action a:hover.a .btn-action .fa {
-  font-size: 120px;
-}
-
-body.body h1.title {
-  font-family: 'Lobster', cursive;
-  font-size: 38px;
-  width: 500px;
-  color: white;
-  text-align: center;
-  display: block;
-  margin: 0 auto;
-  padding-top: 157px;
-  margin-top: 80px;
-}
-
-body.body #connexion-container {
-  background: white;
-  display: block;
-  width: 350px;
-  margin: 0 auto;
-  border-radius: 4px;
-  padding: 30px 50px;
-  margin-top: 120px;
-}
-
-body.body #connexion-container .input-group {
-  border: 1px solid #ccc;
-}
-
-body.body #connexion-container .input-group-addon {
-  border: none;
-  background: none;
-}
-
-body.body #connexion-container input {
-  border: none;
-}
-
-body.body #connexion-container #title-form {
-  font-family: 'Lobster', cursive;
-  font-size: 24px;
-  margin-bottom: 20px;
-  display: block;
-  text-align: center;
-}
-
-body.body #connexion-container button.btn {
-  background: #16a085;
-  border: none;
-  padding: 10px 0;
-}
-
-body.body #bg {
-  background: url("../resources/images/bg.jpg") no-repeat;
-  background-size: cover;
-  height: 100vh;
-  width: 100%;
-  position: absolute;
-  z-index: -1;
-}
-
-body.body button.btn {
-  border-radius: 50px;
-}
-
-body.body #footer {
-  position: absolute;
-  bottom: -80px;
-  background: #101418;
-  height: 60px;
-  line-height: 60px;
-  text-align: center;
-  color: white;
-  width: 100%;
-}
-
-body.body #footer p {
-  margin-bottom: 0px;
-}
+a{color:#101418}body.body{font-family:'Roboto', sans-serif;padding:0;margin:0;font-size:12px;background:#f3f3f3}body.body .header{position:fixed;top:0;background:white;width:100%;padding:20px 0;height:80px;box-shadow:3px 0 7px rgba(0,0,0,0.4)}body.body .header .header-container{width:1200px;margin:0 auto}body.body .header .header-container .loginBtn{float:right}body.body .header .header-container img{float:left}body.body .header .header-container ul{float:right;margin-right:20px}body.body .header .header-container ul li a{padding-top:8px;padding-bottom:8px;font-weight:bold;border-radius:3px}body.body .header .header-container ul li a:hover{color:white;background:#16a085}body.body .container .block-action{margin:0 auto;width:810px;margin-top:120px}body.body .container .block-action a.a{color:#101418}body.body .container .block-action a.a .btn-action{width:250px;padding:40px;margin-right:20px;float:left;border-radius:10px;background:white;box-shadow:0 0 5px rgba(0,0,0,0.3);transition:all 100ms ease-out}body.body .container .block-action a.a .btn-action .fa{text-align:center;font-size:100px;display:block;margin:0 auto;transition:all 100ms ease-out}body.body .container .block-action a.a .btn-action .yes{color:#16a085}body.body .container .block-action a.a .btn-action .no{color:#e74c3c}body.body .container .block-action a.a .btn-action .blur{color:#e67e22}body.body .container .block-action a.a .btn-action .title-action{line-height:50px;display:block;font-size:18px;text-align:center;margin:0 auto;font-weight:bold;transition:all 100ms ease-out}body.body .container .block-action a:hover.a{color:#101418}body.body .container .block-action a:hover.a .btn-action{padding:30px}body.body .container .block-action a:hover.a .btn-action .fa{font-size:120px}body.body h1.title{font-family:'Lobster', cursive;font-size:38px;width:500px;color:white;text-align:center;display:block;margin:0 auto;padding-top:157px;margin-top:80px}body.body #connexion-container{background:white;display:block;width:350px;margin:0 auto;border-radius:4px;padding:30px 50px;margin-top:120px}body.body #connexion-container .input-group{border:1px solid #ccc}body.body #connexion-container .input-group-addon{border:none;background:none}body.body #connexion-container input{border:none}body.body #connexion-container #title-form{font-family:'Lobster', cursive;font-size:24px;margin-bottom:20px;display:block;text-align:center}body.body #connexion-container button.btn{background:#16a085;border:none;padding:10px 0}body.body #bg{background:url("../resources/images/bg.jpg") no-repeat;background-size:cover;height:100vh;width:100%;position:absolute;z-index:-1}body.body button.btn{border-radius:50px}body.body #footer{position:absolute;bottom:-80px;background:#101418;height:60px;line-height:60px;text-align:center;color:white;width:100%}body.body #footer p{margin-bottom:0px}
