--- a/src/main/webapp/partials/header2.xhtml
+++ b/src/main/webapp/partials/header2.xhtml
@@ -18,8 +18,8 @@
 	
 	
     <b:navbarLinks>
-        <b:navLink value="Lancer un vote" href="#"></b:navLink>
-        <b:navLink value="Les votes en cours" href="#"></b:navLink>
+        <b:navLink value="Lancer un vote" href="StudentLink/../createVote.xhtml"></b:navLink>
+        <b:navLink value="Les votes en cours" href="StudentLink/../listeVote.xhtml"></b:navLink>
         <b:navLink value="Mon compte" href="StudentLink/../monCompte.xhtml"></b:navLink>
     </b:navbarLinks>
     
