--- a/src/main/webapp/resources/scss/style.scss
+++ b/src/main/webapp/resources/scss/style.scss
@@ -64,6 +64,7 @@ body.body {
 				    box-shadow: 0 0 5px rgba(0,0,0,0.3);
 				    transition: all 100ms ease-out;
 					.fa{
+						color: #16a085;
 					    text-align: center;
 					    font-size: 100px;
 					    display: block;
@@ -153,6 +154,17 @@ body.body {
 	    	background: #16a085;
 	    	border: none;
 	    	padding: 10px 0;
+	    }
+	    
+	    #stats {
+	    	text-align: center;
+	    	font-family: 'Lobster', cursive;
+	    	font-size: 18px;
+	    }
+	    
+	    #listevote {
+	    	font-family: 'Lobster', cursive;
+	    	font-size: 18px;
 	    }
 	}
 	
